[project]
name = "test_pdm"
version = "0.0.1"
description = "sample project to test pdm and pyenv"
readme = "./README.md"
authors = [
    {name = "Ning Wang", email = "nyngwang@gmail.com"},
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/nyngwang/test_pdm1"

[tool.pdm.scripts.start]
cmd = "python3 ./main.py"
env = {FOO = "foo", BAR = "bar"}


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
]

[tool.pyright]
extraPaths = ["__pypackages__/<major.minor>/lib/"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
