[project]
name = "test_pdm"
version = "0.0.1"
description = "sample project to test pdm and pyenv"
readme = "./README.md"
authors = [
    {name = "Ning Wang", email = "nyngwang@gmail.com"},
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "scikit-learn>=1.0.2",
]

[project.urls]
Homepage = "https://github.com/nyngwang/test_pdm1"

[project.optional-dependencies]
[tool.pdm.scripts.start]
cmd = "python3 ./main.py"
env = {FOO = "foo", BAR = "bar"}


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "flake8>=4.0.1",
    "autopep8>=1.6.0",
    "mypy>=0.931",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
