[project]
name = "test_pdm"
version = "0.0.1"
description = "sample project to test pdm and pyenv"
readme = "./README.md"
authors = [
    {name = "Ning Wang", email = "nyngwang@gmail.com"},
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "scikit-learn>=1.0.2",
    "requests>=2.27.1",
]

[project.urls]
Homepage = "https://github.com/nyngwang/test_pdm1"

[project.optional-dependencies]
[tool.pdm.scripts.start]
cmd = "python3 ./main.py"
env = {FOO = "foo", BAR = "bar"}


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
]

[tool.pyright]
extraPaths = ["__pypackages__/3.9/lib/"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
